--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -28,7 +28,7 @@ body {
   resize: none;
   height: calc(100% - 63px);
   padding-top: 20px;
-  color: #E9FFE8
+  color: #BDF3BC
 }
 
 .note-title {
