--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -3,6 +3,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  Color: #1FB57A;
 }
 
 .save-note {
@@ -76,4 +77,7 @@ body {
   border-right: none;
   padding: 20px;
   cursor: pointer;
+}
+.text-light {
+    color: #E4FFE4 !important;
 }
