--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -81,3 +81,13 @@ body {
 .text-light {
     color: #E4FFE4 !important;
 }
+body {
+    margin: 0;
+    font-family: "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 0.9375rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: left;
+    background-color: #E4FFE4;
+}
